Écrit des consignes dans README